Day-153-Egress-Firewall-Cilium/2-cilium-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: strict-ai-egress-control
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: secure-ai-worker
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  
  - toFQDNs:
    - matchName: "huggingface.co"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
